# MailBoxCleaner

./: README.md  pyproject.toml
data/metainfo/: cz.vitexsoftware.mailbox-cleaner.metainfo.xml
debian/: Jenkinsfile  changelog  control  copyright  mailbox-cleaner.install  mailbox-cleaner.manpages  rules
mailbox_cleaner/: cli.py  imap_client.py  mbox_writer.py  systemd_deploy.py
man/: mailbox-cleaner.1
