[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailbox-cleaner"
version = "0.2.0"
description = "Move old IMAP messages to Thunderbird Local Folders"
readme = "README.md"
license = "GPL-2.0-or-later"
authors = [{name = "Vítězslav Dvořák", email = "info@vitexsoftware.cz"}]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/VitexSoftware/MailBoxCleaner"

[project.scripts]
mailbox-cleaner = "mailbox_cleaner.cli:main"

[tool.setuptools.packages.find]
include = ["mailbox_cleaner*"]
